--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   build:
     commands:
       - echo entered into build phase
-      - mvn clean packages
+      - mvn clean package
   post_build:
     commands:
       - Build comopleted succeessfully
