--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
       - mvn clean package
   post_build:
     commands:
-      - Build comopleted succeessfully
+      - echo Build comopleted succeessfully
 artifacts:
   files:
     - target/awscodedeployproject.jar
